<resources>
    <string name="app_name">Koffee</string>
    <string name="title_home">Home</string>
    <string name="title_admin">Admin</string>
    <string name="name">Name</string>
    <string name="user_name_id_format">%1$s (%2$s)</string>
    <string name="no_results">No results</string>
    <string name="set_active_user_format">Set %1$s (%2$s) as your active user?</string>
    <string name="set_as_active_user">Set As Active User</string>
    <string name="cancel">Cancel</string>
    <string name="no_user_selected">Looks like no user has been selected yet!</string>
    <string name="currency_format">%.2f€</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_details">Item Details</string>
    <string name="buy">Buy</string>
    <string name="transactions_title">Transactions</string>
    <string name="transactions_title_format">Transactions of %s</string>
    <string name="refund">Refund</string>
    <string name="refund_image_description">Refund</string>
    <string name="title_login">Login</string>
    <string name="user_id">UserID</string>
    <string name="password">Password</string>
    <string name="login_success">Login successful.</string>
    <string name="logout">Logout</string>
    <string name="got_to_selection">Go To Selection</string>
    <string name="title_user_creation">Create User</string>
    <string name="is_admin">Is Admin</string>
    <string name="title_item_creation">Create Item</string>
    <string name="id">ID</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="item_creation_success">Item created successfully.</string>
    <string name="user_creation_success">User created successfully.</string>
    <string name="item_deletion_success">Item deleted successfully.</string>
    <string name="user_deletion_success">User deleted successfully.</string>
    <string name="title_user_list">Users</string>
    <string name="delete_format">Delete %s?</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation_format">Are you sure that you want to delete %s? This action cannot be undone.</string>
    <string name="item_not_found">This item no longer exists.</string>
    <string name="go_back">Go Back</string>
    <string name="title_item_editing">Edit Item</string>
    <string name="update_item">Update Item</string>
    <string name="item_editing_success">Item updated successfully.</string>
    <string name="user_editing_success">User updated successfully.</string>
    <string name="title_user_details">User Details</string>
    <string name="view_user_as_admin">View As Admin</string>
    <string name="title_user_editing">Edit User</string>
    <string name="update_user">Update User</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="no_connection">Unable to reach the server.</string>
    <string name="user_not_found">This user no longer exists.</string>
    <string name="active_user_deleted">The previously active user has been deleted.</string>
    <string name="item">Item</string>
    <string name="no_transactions">No transactions available</string>
    <string name="no_statistics">No statistics available</string>
    <string name="none">None</string>
    <string name="funding">Funding</string>
    <string name="purchase">Purchase</string>
    <string name="no_data">N/D</string>
    <string name="positive_currency_format">+%.2f€</string>
    <string name="transaction_item_details">%1$s (%2$d)</string>
    <string name="no_transaction_details">No Details</string>
    <string name="fund_user">Fund User</string>
    <string name="credit_user">Credit User</string>
    <string name="title_user_crediting">Credit User</string>
    <string name="user_crediting_success">User credited successfully.</string>
    <string name="login_expired">Your login has expired.</string>
    <string name="logged_in_as_format">Logged in as %s</string>
    <string name="expiry_format">Expiry: %s</string>
    <string name="id_optional">ID (optional)</string>
    <string name="amount_optional">Amount (optional)</string>
    <string name="delete_profile_image_confirmation">Are you sure that you want to delete the profile picture? This action cannot be undone.</string>
    <string name="launch_alternative_activity">Launch alternative activity</string>
    <string name="browse_items">Browse items</string>
    <string name="title_user">User</string>
    <string name="edit">Edit</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="title_history">History</string>
    <string name="login_info">Access admin tools</string>
    <string name="admin_login">Admin Login</string>
    <string name="select_your_user">Select your user</string>
    <string name="change_user">Change User</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_items">Manage Items</string>
    <string name="launch">Launch</string>
    <string name="launch_shared_activity">Start shared mode</string>
    <string name="title_settings">Settings</string>
    <string name="item_name">Item Name</string>
    <string name="selected_user_deleted">The selected user has been deleted.</string>
    <string name="select_image_action">Edit or delete your profile image.</string>
    <string name="amount_format">%d in stock</string>
    <string name="title_statistics">Statistics</string>
    <string name="purchased_amount_format">%d units purchased</string>
    <string name="last_purchase_format">Last purchase %s</string>
</resources>
