<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="eu.yeger.koffee.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="userId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_selection"
        android:name="eu.yeger.koffee.ui.user_selection.UserSelectionFragment"
        android:label="@string/title_user_selection"
        tools:layout="@layout/fragment_user_selection">
        <action
            android:id="@+id/action_navigation_user_selection_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_admin"
        android:name="eu.yeger.koffee.ui.admin.AdminFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_admin" >
        <action
            android:id="@+id/action_navigation_admin_to_loginFragment"
            app:destination="@id/navigation_login"
            app:popUpTo="@id/navigation_admin"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_item_list"
        android:name="eu.yeger.koffee.ui.item_list.ItemListFragment"
        android:label="@string/title_item_list"
        tools:layout="@layout/fragment_item_list" >
        <action
            android:id="@+id/action_navigation_item_list_to_itemDetailsFragment"
            app:destination="@id/navigation_item_details" />
    </fragment>
    <fragment
        android:id="@+id/navigation_item_details"
        android:name="eu.yeger.koffee.ui.item_details.ItemDetailsFragment"
        android:label="@string/title_item_details">
        <argument
            android:name="itemId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="eu.yeger.koffee.ui.login.LoginFragment"
        android:label="@string/title_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_admin"
            app:destination="@id/navigation_admin"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
