<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="eu.yeger.koffee.ui.home.MainHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/to_item_details"
            app:destination="@id/navigation_item_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_admin_user_list"
        android:name="eu.yeger.koffee.ui.user.list.AdminUserListFragment"
        android:label="@string/title_user_list"
        tools:layout="@layout/fragment_user_list">
        <action
            android:id="@+id/to_user_creation"
            app:destination="@id/navigation_user_creation" />
        <action
            android:id="@+id/to_user_details"
            app:destination="@id/navigation_user_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="eu.yeger.koffee.ui.settings.SettingsFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/to_login"
            app:destination="@id/navigation_login"
            app:popUpToInclusive="false" />
        <argument
            android:name="loginExpired"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/to_user_list"
            app:destination="@id/navigation_admin_user_list" />
        <action
            android:id="@+id/to_admin_item_list"
            app:destination="@id/navigation_admin_item_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_item_details"
        android:name="eu.yeger.koffee.ui.item.details.MainItemDetailsFragment"
        android:label="@string/title_item_details"
        tools:layout="@layout/fragment_item_details">
        <argument
            android:name="itemId"
            app:argType="string" />
        <action
            android:id="@+id/to_item_editing"
            app:destination="@id/navigation_item_editing" />
        <action
            android:id="@+id/to_settings"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_item_details"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/to_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/to_admin_item_list"
            app:destination="@id/navigation_admin_item_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="eu.yeger.koffee.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/to_settings"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_creation"
        android:name="eu.yeger.koffee.ui.user.creation.UserCreationFragment"
        android:label="@string/title_user_creation"
        tools:layout="@layout/fragment_user_creation">
        <action
            android:id="@+id/to_user_details"
            app:destination="@id/navigation_user_details"
            app:popUpTo="@id/navigation_user_creation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/to_settings"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_user_creation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_item_creation"
        android:name="eu.yeger.koffee.ui.item.creation.ItemCreationFragment"
        android:label="@string/title_item_creation"
        tools:layout="@layout/fragment_item_creation">
        <action
            android:id="@+id/to_item_details"
            app:destination="@id/navigation_item_details"
            app:popUpTo="@id/navigation_item_creation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/to_settings"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_item_creation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_item_editing"
        android:name="eu.yeger.koffee.ui.item.editing.ItemEditingFragment"
        android:label="@string/title_item_editing"
        tools:layout="@layout/fragment_item_editing">
        <argument
            android:name="itemId"
            app:argType="string" />
        <action
            android:id="@+id/to_item_details"
            app:destination="@id/navigation_item_details"
            app:popUpTo="@id/navigation_item_editing"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/to_settings"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_item_editing"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_details"
        android:name="eu.yeger.koffee.ui.user.details.AdminUserDetailsFragment"
        android:label="@string/title_user_details"
        tools:layout="@layout/fragment_user_details">
        <argument
            android:name="userId"
            app:argType="string" />
        <action
            android:id="@+id/to_user_editing"
            app:destination="@id/navigation_user_editing" />
        <action
            android:id="@+id/to_user_list"
            app:destination="@id/navigation_admin_user_list"
            app:popUpTo="@id/navigation_user_details"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/to_user_crediting"
            app:destination="@id/navigation_user_crediting" />
        <action
            android:id="@+id/to_settings"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_user_details"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_editing"
        android:name="eu.yeger.koffee.ui.user.editing.UserEditingFragment"
        android:label="@string/title_user_editing"
        tools:layout="@layout/fragment_user_editing">
        <argument
            android:name="userId"
            app:argType="string" />
        <action
            android:id="@+id/to_user_details"
            app:destination="@id/navigation_user_details"
            app:popUpTo="@id/navigation_user_editing"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/to_settings"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_user_editing"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_crediting"
        android:name="eu.yeger.koffee.ui.user.crediting.UserCreditingFragment"
        android:label="@string/credit_user"
        tools:layout="@layout/fragment_user_crediting">
        <argument
            android:name="userId"
            app:argType="string" />
        <action
            android:id="@+id/to_user_details"
            app:destination="@id/navigation_user_details"
            app:popUpTo="@id/navigation_user_crediting"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/to_settings"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_user_crediting"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_history"
        android:name="eu.yeger.koffee.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/to_item_details"
            app:destination="@id/navigation_item_details" />
        <action
            android:id="@+id/to_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_admin_item_list"
        android:name="eu.yeger.koffee.ui.item.list.AdminItemListFragment"
        android:label="@string/title_item_list"
        tools:layout="@layout/fragment_item_list">
        <action
            android:id="@+id/to_item_creation"
            app:destination="@id/navigation_item_creation" />
        <action
            android:id="@+id/to_item_details"
            app:destination="@id/navigation_item_details" />
    </fragment>
</navigation>
