<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alternative_navigation"
    app:startDestination="@id/navigation_alt_user_list">

    <fragment
        android:id="@+id/navigation_alt_user_list"
        android:name="eu.yeger.koffee.ui.alternative.user.list.AlternativeUserListFragment"
        android:label="@string/title_user_list"
        tools:layout="@layout/fragment_user_list">
        <action
            android:id="@+id/to_alt_user_details"
            app:destination="@id/navigation_alt_user_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_alt_user_details"
        android:name="eu.yeger.koffee.ui.alternative.user.details.AlternativeUserDetailsFragment"
        android:label="@string/title_user_details"
        tools:layout="@layout/fragment_user_details">
        <action
            android:id="@+id/to_alt_item_list"
            app:destination="@id/navigation_alt_item_list" />
        <action
            android:id="@+id/to_alt_item_details"
            app:destination="@id/navigation_alt_item_details" />
        <argument
            android:name="userId"
            app:argType="string" />
        <action
            android:id="@+id/to_alt_user_list"
            app:destination="@id/navigation_alt_user_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_alt_item_list"
        android:name="eu.yeger.koffee.ui.alternative.item.list.AlternativeItemListFragment"
        android:label="@string/title_item_list"
        tools:layout="@layout/fragment_item_list">
        <action
            android:id="@+id/to_alt_item_details"
            app:destination="@id/navigation_alt_item_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_alt_item_details"
        android:name="eu.yeger.koffee.ui.alternative.item.details.AlternativeItemDetailsFragment"
        android:label="@string/title_item_details"
        tools:layout="@layout/fragment_item_details">
        <argument
            android:name="itemId"
            app:argType="string" />
    </fragment>
</navigation>